--- a/requirements.txt
+++ b/requirements.txt
@@ -26,4 +26,5 @@ google-auth>=2.27.0
 google-auth-oauthlib>=1.2.0
 google-auth-httplib2>=0.2.0
 google-api-python-client>=2.116.0
+google-generativeai>=0.3.0
 langchain-google-genai>=1.0.0
